tests/snapshots/errors/unexpected_character.mc
// Test unexpected character
let x = 1 ~ 2;
